fix(style): remove shift by scroll

--- a/src/core/assets/main.css
+++ b/src/core/assets/main.css
@@ -8,3 +8,8 @@ body {
 em {
   display: inline-block;
 }
+
+
+html {
+  scrollbar-gutter: stable;
+}
